fix(둘러보기) : 기존 방식으로 수정
- 본인 플레이스트 제외하고 대표 플레이스만 셔플 되게 구현