@@ -17,6 +17,7 @@ import com.example.demo.domain.song.repository.SongRepository;
 import com.example.demo.domain.song.util.DurationFormatUtil;
 import com.example.demo.domain.user.entity.Users;
 import com.example.demo.domain.user.repository.UsersRepository;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.annotation.PostConstruct;
 import jakarta.transaction.Transactional;
@@ -60,151 +61,84 @@ public class BrowsePlaylistShuffleService {
 
 
 
-    //@Scheduled(cron = "0 0 3 * * *", zone = "Asia/Seoul")
+    @Scheduled(cron = "0 0 3 * * *", zone = "Asia/Seoul")
     @Transactional
     public void scheduledShuffle() {
-        // 1. 대표 플레이리스트 보유한 유저만 조회
-        List<String> userIds = representativePlaylistRepository.findUserIdsWithRepPlaylist(); // 순서 중요
+        List<String> userIds = usersRepository.findAllUserIds();
+        log.info(" 셔플 대상 유저 수: {}", userIds.size());
 
-        List<RepresentativePlaylist> reps = representativePlaylistRepository.findByUserIds(userIds);
-
-        // userId → playlistId 매핑
-        Map<String, Long> userToPlaylistId = reps.stream()
-                .collect(Collectors.toMap(
-                        r -> r.getUser().getId(),
-                        r -> r.getPlaylist().getId()
-                ));
-
-        // 순서 맞게 playlistIds 재정렬
-        List<Long> playlistIds = userIds.stream()
-                .map(userToPlaylistId::get)
-                .toList();
-
-
-        int n = userIds.size();
-
-        // 2. 대표 플리 없는 유저 존재 시 → 제외되고 셔플 자체를 수행하지 않음
-        if (n == 0 || playlistIds.size() < n) {
-            log.warn("대표 플레이리스트 정보 부족 또는 유저-플리 매핑 불일치 (userIds={}, playlistIds={})", n, playlistIds.size());
-            return;
-        }
-
-        // 3. position 중복 없이 유효한 셔플 매트릭스 생성
-        List<List<Integer>> validMatrix = findValidShuffleMatrix(n);
-        if (validMatrix == null) {
-            log.error("position 중복 없는 유효 매트릭스 없음");
-            return;
-        }
-
-        // 4. 유저별로 셔플된 playlistId 할당 및 카드 저장
-        for (int i = 0; i < n; i++) {
-            String userId = userIds.get(i);
-            List<Long> assigned = new ArrayList<>();
-            for (int pos = 0; pos < n - 1; pos++) {
-                int playlistIndex = validMatrix.get(i).get(pos);
-                assigned.add(playlistIds.get(playlistIndex));
-            }
+        for (String userId : userIds) {
             try {
-                assignShuffledCards(userId, assigned);
+                shuffleAndStore(userId);
             } catch (Exception e) {
-                log.error("셔플 실패: userId={}, error={}", userId, e.getMessage(), e);
+                log.error(" 셔플 실패: userId={}", userId, e);
             }
         }
+
+        log.info(" BrowseSnapshot 셔플 완료 - 전체 유저 대상");
     }
 
-    private List<List<Integer>> findValidShuffleMatrix(int n) {
-        List<List<Integer>> result = new ArrayList<>();
-        Set<Integer>[] usedInPosition = new Set[n - 1];
-        for (int i = 0; i < n - 1; i++) usedInPosition[i] = new HashSet<>();
-
-        backtrackShuffle(0, n, new ArrayList<>(), usedInPosition, result);
-        return result.isEmpty() ? null : result;
-    }
-
-    private boolean backtrackShuffle(int userIdx, int n, List<List<Integer>> assignment, Set<Integer>[] used, List<List<Integer>> result) {
-        if (userIdx == n) {
-            result.addAll(new ArrayList<>(assignment));
-            return true;
-        }
-
-        List<Integer> candidates = new ArrayList<>();
-        for (int i = 0; i < n; i++) if (i != userIdx) candidates.add(i);
-
-        for (List<Integer> perm : permutations(candidates)) {
-            boolean valid = true;
-            for (int pos = 0; pos < perm.size(); pos++) {
-                if (used[pos].contains(perm.get(pos))) {
-                    valid = false;
-                    break;
-                }
-            }
-            if (!valid) continue;
-
-            for (int pos = 0; pos < perm.size(); pos++) used[pos].add(perm.get(pos));
-            assignment.add(perm);
-
-            if (backtrackShuffle(userIdx + 1, n, assignment, used, result)) return true;
-
-            assignment.remove(assignment.size() - 1);
-            for (int pos = 0; pos < perm.size(); pos++) used[pos].remove(perm.get(pos));
-        }
-        return false;
-    }
-
-    private List<List<Integer>> permutations(List<Integer> list) {
-        List<List<Integer>> result = new ArrayList<>();
-        permute(list, 0, result);
-        return result;
-    }
-
-    private void permute(List<Integer> arr, int k, List<List<Integer>> out) {
-        if (k == arr.size()) {
-            out.add(new ArrayList<>(arr));
-        } else {
-            for (int i = k; i < arr.size(); i++) {
-                Collections.swap(arr, i, k);
-                permute(arr, k + 1, out);
-                Collections.swap(arr, i, k);
-            }
-        }
-    }
-
-    // 카드 생성 및 저장 로직 (실제 구현 필요)
-    private void assignShuffledCards(String userId, List<Long> assignedPlaylistIds) {
-        // 기존 카드 삭제
+    @Transactional
+    public void shuffleAndStore(String userId) {
+        // 1. 기존 스냅샷 삭제
         browseSnapshotRepository.deleteByUserId(userId);
 
-        Users user = usersRepository.findById(userId)
+        // 2. 대표 플레이리스트 ID 셔플
+        List<Long> original = representativePlaylistRepository.findAllPlaylistIdsExcludingUser(userId);
+        if (original == null || original.isEmpty()) {
+            log.warn(" 대표 플레이리스트가 비어있습니다. userId={}", userId);
+            return;
+        }
+
+        Long limit = representativePlaylistRepository.countByAllUserId();
+
+        List<Long> playlistIds = new ArrayList<>(original);
+        long seed = System.nanoTime() ^ UUID.randomUUID().getMostSignificantBits();
+        Collections.shuffle(playlistIds, new Random(seed));
+
+        List<Long> selectedIds = playlistIds.stream()
+                .limit(limit)
+                .toList();
+
+        log.info(" 셔플 완료: userId={}, selectedPlaylistIds={}", userId, selectedIds);
+
+        // 3. CD Map 조회
+        Map<Long, List<CdItemResponse>> cdItemsMap = getCdMap(selectedIds);
+
+        // 4. 유저 조회
+       usersRepository.findById(userId)
                 .orElseThrow(() -> new IllegalArgumentException("유저 없음: " + userId));
 
-        Map<Long, List<CdItemResponse>> cdMap = getCdMap(assignedPlaylistIds);
-
-        List<BrowsePlaylistCard> cards = new ArrayList<>();
-
-        for (int i = 0; i < assignedPlaylistIds.size(); i++) {
-            Long playlistId = assignedPlaylistIds.get(i);
+        // 5. 카드 생성
+        List<BrowsePlaylistCard> snapshots = new ArrayList<>();
+        for (int i = 0; i < selectedIds.size(); i++) {
+            Long playlistId = selectedIds.get(i);
             Playlist playlist = playlistRepository.findById(playlistId)
                     .orElseThrow(() -> new IllegalArgumentException("플레이리스트 없음: " + playlistId));
 
             List<Song> songs = songRepository.findByPlaylistId(playlistId);
+            List<SongDto> songDtos = songs.stream().map(SongDto::from).toList();
 
             String songsJson;
             try {
-                songsJson = objectMapper.writeValueAsString(songs.stream().map(SongDto::from).toList());
-            } catch (Exception e) {
-                log.warn("곡 JSON 변환 실패: playlistId={}, userId={}", playlistId, userId, e);
+                songsJson = objectMapper.writeValueAsString(songDtos);
+            } catch (JsonProcessingException e) {
+                log.warn(" 곡 JSON 변환 실패: playlistId={}, userId={}", playlistId, userId, e);
                 continue;
             }
 
-            String cdJson;
+            String cdItemsJson;
             try {
-                cdJson = objectMapper.writeValueAsString(cdMap.getOrDefault(playlistId, List.of()));
-            } catch (Exception e) {
-                log.warn("CD JSON 변환 실패: playlistId={}, userId={}", playlistId, userId, e);
+                List<CdItemResponse> cdItems = cdItemsMap.getOrDefault(playlistId, Collections.emptyList());
+                cdItemsJson = objectMapper.writeValueAsString(cdItems);
+            } catch (JsonProcessingException e) {
+                log.warn(" CD 아이템 JSON 변환 실패: playlistId={}, userId={}", playlistId, userId, e);
                 continue;
             }
 
-            BrowsePlaylistCard card = BrowsePlaylistCard.builder()
+            long totalSec = songs.stream().mapToLong(Song::getYoutubeLength).sum();
+
+            BrowsePlaylistCard snapshot = BrowsePlaylistCard.builder()
                     .userId(userId)
                     .playlistId(playlistId)
                     .position(i)
@@ -213,19 +147,18 @@ public class BrowsePlaylistShuffleService {
                     .creatorId(playlist.getUsers().getId())
                     .creatorName(playlist.getUsers().getUsername())
                     .songsJson(songsJson)
-                    .cdItemsJson(cdJson)
+                    .cdItemsJson(cdItemsJson)
                     .isRepresentative(true)
                     .shareUrl(playlistMyPageService.sharePlaylist(userId))
-                    .totalTime(DurationFormatUtil.formatToHumanReadable(
-                            songs.stream().mapToLong(Song::getYoutubeLength).sum()
-                    ))
+                    .totalTime(DurationFormatUtil.formatToHumanReadable(totalSec))
                     .build();
 
-            cards.add(card);
+            snapshots.add(snapshot);
         }
 
-        browseSnapshotRepository.saveAll(cards);
-        log.info("카드 저장 완료: userId={}, 개수={}", userId, cards.size());
+        // 6. 저장
+        browseSnapshotRepository.saveAll(snapshots);
+        log.info(" 저장 완료: userId={}, 저장된 스냅샷 개수={}", userId, snapshots.size());
     }
 
     private Map<Long, List<CdItemResponse>> getCdMap(List<Long> playlistIds) {
@@ -239,5 +172,4 @@ public class BrowsePlaylistShuffleService {
         }
         return result;
     }
-
 }
